2005-08-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* time.tcl: SNTP wasn't working (raised by Donal Fellows). 
	Added support for ceptcl in addition to tcludp. Incremented
	version.

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-08-19  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* time.tcl:    Tidied up error messages.

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* time.tcl:     Updated version number to distinguish
	* ntp_time.man: from the 1.6.1 release.
	* pkgIndex.tcl:

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* time.tcl: Rel. engineering. Updated version number 
	* time.man: of time to reflect its changes, to 1.0.3.
	* pkgIndex.tcl:

2004-04-30  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* time.tcl:     Added support for SNTP (RFC 2030).
	* ntp_time.man:

2004-02-28  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* time.tcl: Fix the version as 1.0.2

2004-02-26  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* time.tcl: Applied patch #905132 to better handle socket errors.

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2003-05-29  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* time.tcl: Conform more closely to the RFC in response to 
	bug #744391.

2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.4 ========================
	* 

2003-05-05  Andreas Kupries  <andreask@activestate.com>

	* pkgIndex.tcl: Resynced package version numbers for this module.

2003-05-02  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* time.tcl (unixtime): Applied patch from Andreas Kupries to